--- a/functions/package.json
+++ b/functions/package.json
@@ -12,11 +12,13 @@
     "node": "8"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "firebase": "^7.14.2",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
   },
-  "private": true
+  "private": false
 }
