--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.0"
+    "firebase-functions": "^3.6.0",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
